helmchart-jenkins-operator/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helmchart-jenkins-operator
  labels:
    helm.sh/chart: helmchart-jenkins-operator-0.1.0
    app.kubernetes.io/name: helmchart-jenkins-operator
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "jenkins.k3s.zremal.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-http-jenkins
                port:
                  number: 8080
